create the entity framework code and account.

--- a/Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Web.Models.RegisterExternalLoginModel
+﻿@model SimpleWiki.Web.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "注册";
 }
