--- a/Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<Web.Models.ExternalLogin>
+﻿@model ICollection<SimpleWiki.Web.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>已注册外部登录</h3>
     <table>
         <tbody>
-        @foreach (Web.Models.ExternalLogin externalLogin in Model)
+        @foreach (SimpleWiki.Web.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
